Sidebar to overflow when fixed

--- a/_sass/components/_sidebar.scss
+++ b/_sass/components/_sidebar.scss
@@ -81,6 +81,8 @@
     &.affix {
       position: fixed; /* Undo the static from mobile first approach */
       top: 70px;
+      bottom: 0;
+      overflow: auto;
     }
 
     &.affix-bottom {
